Wed Aug 01 04:54:18 GMT 2012  Dan Colish <dcolish@gmail.com>

	* Makefile.am,api/Makefile,backends/Makefile,backends/brass/Makefile,
	  backends/chert/Makefile,backends/inmemory/Makefile,
	  backends/multi/Makefile,backends/remote/Makefile,bin/Makefile,
	  common/Makefile,examples/Makefile,expand/Makefile,
	  geospatial/Makefile,include/Makefile,include/xapian/Makefile,
	  languages/Makefile,matcher/Makefile,net/Makefile,
	  queryparser/Makefile,tests/harness/Makefile,unicode/Makefile,
	  weight/Makefile: Add check-syntax target to Makefiles to support
	  editor syntax checks

Sun Jul 29 15:32:00 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Bump LIBRARY_VERSION_INFO so I can package a snapshot
	  cleanly.

Tue Jul 24 01:35:17 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h,queryparser/queryparser.cc,
	  queryparser/queryparser.lemony,queryparser/queryparser_internal.h,
	  tests/queryparsertest.cc: Add FieldProcessor class (ticket#128) -
	  currently marked as an experimental API while we sort out how best
	  to sort out exactly how it interacts with other QueryParser features.

Tue Jul 24 01:19:03 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Add extra DateValueRangeProcessor
	  constructor overloaded form so that in DateValueRangeProcessor(1,
	  "date:"), the const char * gets interpreted as std::string rather
	  than bool.
	* tests/queryparsertest.cc: Add regression test.

Thu Jul 19 05:32:04 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_dbcheck.h,
	  backends/inmemory/inmemory_alltermslist.cc,bin/xapian-delve.cc: Fix
	  filenames in comments which mismatch actual name of file.

Thu Jul 19 05:27:38 GMT 2012  Olly Betts <olly@survex.com>

	* queryparser/termgenerator_internal.cc: Remove "FIXME: Add API to
	  allow control of how stemming is used?", as we have now added such
	  an API.

Thu Jul 19 05:24:49 GMT 2012  Olly Betts <olly@survex.com>
